--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.0",
     "react-youtube": "^10.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.56.0",
