--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-color-extractor": "^1.1.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.6.0",
