--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "start-sw": "http/server ./build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -73,7 +72,6 @@
   "devDependencies": {
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-helmet": "^6.1.5",
-    "file-loader": "^6.2.0",
-    "http-server": "^14.1.1"
+    "file-loader": "^6.2.0"
   }
 }
